# sbo-test-station

./: README.md
billing-app/: Chart.yaml  values-prod.yaml  values-stage.yaml  values-test.yaml
billing-app/templates/: NOTES.txt  app-deployment.yaml  auth-app-deployment.yaml  auth-service.yaml  billing-app-deployment.yaml  billing-service.yaml  hpa.yaml  ingress.yaml  logging-app-deployment.yaml  logging-service.yaml  rds-service-binding.yaml  role-for-bucket.yaml  role-for-dbinstance.yaml  s3-service-binding.yaml  s3.yaml  service.yaml  serviceaccount.yaml
billing-app/templates/tests/: test-connection.yaml
bootstrap/: README.md  ack-rds-subscription.yaml  ack-s3-subscription.yaml  application.yaml  argocd-cluster-role-binding.yaml  event-listener.yaml  namespaces.yaml  openshift-gitops-subscription.yaml  pipeline.yaml  prod-application.yaml  sbo-subscription.yaml  stage-application.yaml  task-run-tests.yaml  test-application.yaml
rds/: values-prod.yaml  values-test.yaml
rds/templates/: _helpers.tpl  app-deployment.yaml  db-cred.yaml  deployment.yaml  s3.yaml
test/: Dockerfile  billing-app-test.py
workload/: Cargo.toml  Dockerfile  deployment.yaml
workload-chart/: Chart.yaml  values.yaml
workload-chart/templates/: deployment.yaml
workload/src/: main.rs
